data/forge_javadoc/1.9.4/processed/net_minecraft_client_settings_KeyBinding.md
# KeyBinding

**Inheritance:** java.lang.Object → net.minecraft.client.settings.KeyBinding

## Class signature

```java
public class KeyBinding extends java.lang.Object implements java.lang.Comparable<KeyBinding>
```

## Constructors

- `KeyBinding(java.lang.String description, IKeyConflictContext keyConflictContext, int keyCode, java.lang.String category)`
- `KeyBinding(java.lang.String description, IKeyConflictContext keyConflictContext, KeyModifier keyModifier, int keyCode, java.lang.String category)`
- `KeyBinding(java.lang.String description, int keyCode, java.lang.String category)`

## Methods

- `int compareTo(KeyBinding p_compareTo_1_)`
- `boolean conflicts(KeyBinding other)` — Returns true when the other keyBinding conflicts with this one
- `java.lang.String getDisplayName()`
- `static java.util.Set<java.lang.String> getKeybinds()`
- `java.lang.String getKeyCategory()`
- `int getKeyCode()`
- `int getKeyCodeDefault()`
- `IKeyConflictContext getKeyConflictContext()`
- `java.lang.String getKeyDescription()`
- `KeyModifier getKeyModifier()`
- `KeyModifier getKeyModifierDefault()`
- `boolean hasKeyCodeModifierConflict(KeyBinding other)` — Returns true when one of the bindings' key codes conflicts with the other's modifier.
- `boolean isActiveAndMatches(int keyCode)` — Checks that the key conflict context and modifier are active, and that the keyCode matches this binding.
- `boolean isKeyDown()`
- `boolean isPressed()`
- `boolean isSetToDefaultValue()`
- `static void onTick(int keyCode)`
- `static void resetKeyBindingArrayAndHash()`
- `static void setKeyBindState(int keyCode, boolean pressed)`
- `void setKeyCode(int keyCode)`
- `void setKeyConflictContext(IKeyConflictContext keyConflictContext)`
- `void setKeyModifierAndCode(KeyModifier keyModifier, int keyCode)`
- `void setToDefault()`
- `static void unPressAllKeys()`
- `static void updateKeyBindState()`